--- a/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
+++ b/Notebook.Web/Views/Shared/Components/Header/Default.cshtml
@@ -74,7 +74,7 @@
                                             <a href="#">
                                                 <div class="pull-left">
                                                     <!-- User Image -->
-                                                    <img src="/notebok/images/avatar.png" class="img-circle" alt="User Image">
+                                                    <img src="/notebook/images/avatar.png" class="img-circle" alt="User Image">
                                                 </div>
                                                 <!-- Message title and timestamp -->
                                                 <h4>
@@ -123,14 +123,14 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="@(!string.IsNullOrEmpty(Model.Avatar) ? Model.Avatar : "/notebok/images/avatar.png" )" class="user-image">
+                                <img src="@(Model.Avatar ?? "/notebook/images/avatar.png")" class="user-image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">@Model.Name</span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- The user image in the menu -->
                                 <li class="user-header">
-                                    <img src="@(!string.IsNullOrEmpty(Model.Avatar) ? Model.Avatar : "/notebok/images/avatar.png" )" class="img-circle">
+                                    <img src="@(Model.Avatar ?? "/notebook/images/avatar.png")" class="img-circle">
                                     <p>
                                         @Model.Name
                                         <small>Member since Nov. 2012</small>
