--- a/Notebook.Web/Views/User/Profile.cshtml
+++ b/Notebook.Web/Views/User/Profile.cshtml
@@ -19,7 +19,7 @@
             <!-- Profile Image -->
             <div class="box box-primary">
                 <div class="box-body box-profile" style="padding:15px;">
-                    <img class="profile-user-img img-responsive img-circle" src="@Model.Avatar" alt="User profile picture">
+                    <img class="profile-user-img img-responsive img-circle" src="@(Model.Avatar ?? "/notebook/images/avatar.png")" alt="User profile picture">
 
                     <h3 class="text-center box-title">@Model.Name</h3>
 
