--- a/Notebook.Web/Views/Account/Login.cshtml
+++ b/Notebook.Web/Views/Account/Login.cshtml
@@ -53,7 +53,7 @@
                     <div class="or-seperator">
                         <i>@Localizer["or"]</i>
                     </div>
-                    <form action="/Account/Login" method="post">
+                    <form action="/login" method="post">
                         @Html.AntiForgeryToken()
 
                         <div class="form-group has-feedback">
