--- a/Notebook.Web/Views/Shared/_Layout.cshtml
+++ b/Notebook.Web/Views/Shared/_Layout.cshtml
@@ -22,8 +22,11 @@
     <!-- Jquery Confirm -->
     <link href="/adminlte/components/jquery-confirm/jquery-confirm.min.css" rel="stylesheet" />
 
+    <link href="/notebook/cssJs/css/navigation-menu.css" rel="stylesheet" />
     <!-- Notebook style -->
+
     <link href="/notebook/cssJs/css/notebook.css" rel="stylesheet" />
+    <link href="/notebook/cssJs/css/notebook-mobile.css" rel="stylesheet" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -84,6 +87,7 @@
     <!-- Jquery Confirm -->
     <script src="/adminlte/components/jquery-confirm/jquery-confirm.min.js"></script>
 
+    <script src="/notebook/cssJs/js/navigation-menu.js"></script>
     <!-- Notebook Js -->
     <script src="/notebook/cssJs/js/notebook.js"></script>
     <script src="/notebook/cssJs/js/ajaxFunctions.js"></script>
@@ -117,6 +121,7 @@
                 }
             }
         });
+
     </script>
 
     <scripts render="true"></scripts>
