--- a/Notebook.Web/Views/_ViewImports.cshtml
+++ b/Notebook.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Notebook.Web
 @using Notebook.Web.Models
+@using Notebook.Business.Models
 @using Notebook.Entities.Entities
 @using Notebook.Entities.Enums
 @using Microsoft.AspNetCore.Mvc.Localization
