--- a/Notebook.Web/wwwroot/notebook/cssJs/css/notebook.css
+++ b/Notebook.Web/wwwroot/notebook/cssJs/css/notebook.css
@@ -1,30 +1,6 @@
-﻿@media (max-width: 768px) {
-    .not-mobile{
-        display:none !important;
-    }
-    .mobile {
-        display: block !important;
-    }
-
-    .dataTables_wrapper .dataTables_length{
-        float:left;
-    }
-    .dataTables_wrapper .dataTables_filter{
-        float:left;
-        margin-top:auto;
-        width:150px;
-    }
+﻿.skin-blue {
+    padding-right: 0 !important;
 }
-
-@media (min-width: 768px) {
-    .mobile {
-        display: none !important;
-    }
-}
-.skin-blue{
-    padding-right:0 !important;
-}
-
 
 * {
     padding: 0;
@@ -77,6 +53,16 @@ hr{
     font-size: 10px;
 }
 
+
+.search-panel {
+    margin-bottom:15px;
+}
+.search-panel input[type=text] {
+    outline:none;
+    height:34px;
+    font-weight:normal;
+}
+
 .alert-small {
     padding: 3px;
     margin-bottom: 0
@@ -87,13 +73,13 @@ table .btn {
 }
 input[type=text]{
     border-radius:3px;
-    font-weight:bold;
+    font-size:13px;
     height:32px;
 }
 
 .breadcrumb{
     margin-bottom:10px;
-    padding:7px 10px;
+    padding:12px 10px;
     background:white;
 }
     .breadcrumb a {
@@ -308,17 +294,74 @@ table.dataTable thead .sorting_desc {
     font-weight: bold;
     margin-bottom:0;
 }
-
-
-
-@media (min-width: 768px) {
-    .n-modal-content {
-        width: 500px;
-        margin-top:60px;
-    }
-
-    .n-modal-lg {
-        width:1170px;
-    }
-}
 /*----------------End Notebook Modal-----------------------*/
+
+.flip {
+    width: 100%;
+    position: relative;
+}
+
+.user-card {
+    box-shadow: 0 1px 4px 0 rgba(38,38,38,.3);
+}
+
+.user-card-header {
+    background-color: #f3f3f3;
+    padding: 10px;
+}
+
+.user-card-body {
+    padding: 10px;
+}
+
+.model-card {
+    border-radius: 5px;
+    box-shadow: 0 0 3px #808080;
+    padding: 15px;
+    margin: 10px auto 10px;
+    overflow:hidden;
+}
+
+.model-card-header{
+    width:100%;
+    padding-bottom:10px;
+    border-bottom:1px solid #ddd
+}
+
+.model-card-body {
+    width: 100%;
+    padding: 10px 0;
+}
+
+.model-card-footer {
+    width: 100%;
+    padding-top: 10px;
+    border-top: 1px solid #ddd
+}
+
+.model-card-img {
+    height: 45px;
+    margin-right:5px;
+}
+
+.model-card-title {
+    color: #3C8DBC;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.model-card-content{
+    width:100%;
+    height:50px;
+    overflow:hidden;
+    font-size:85% !important;
+    margin-bottom:10px;
+}
+
+.model-card-info {
+}
+
+    .model-card-info label {
+        width: 100%;
+        font-size: 11px;
+    }
